Avoid line break in tab with long text (#5473)

--- a/src/Sulu/Bundle/AdminBundle/Resources/js/components/Tabs/tab.scss
+++ b/src/Sulu/Bundle/AdminBundle/Resources/js/components/Tabs/tab.scss
@@ -29,6 +29,7 @@ $buttonSmallHorizontalPadding: 10px;
         background-color: transparent;
         font-size: 12px;
         border: 0;
+        white-space: nowrap;
 
         /* Needed because we want to prevent the jump on font-weight changes */
         &::after {
